# lapce

./: .clippy.toml  .codespellrc  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .swp  .taplo.toml  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  deny.toml  dev.lapce.lapce.yaml  docker-bake.hcl  flake.nix  lapce.spec  rust-toolchain.toml  setup.sh  snapcraft.yaml
core/: Cargo.toml  build.rs
core/src/: activity.rs  app.rs  buffer.rs  code_action.rs  command.rs  completion.rs  config.rs  container.rs  data.rs  db.rs  editor.rs  explorer.rs  find.rs  keymap.rs  keypress.rs  language.rs  lib.rs  lsp.rs  menu.rs  movement.rs  outline.rs  palette.rs  panel.rs  picker.rs  plugin.rs  problem.rs  proxy.rs  scroll.rs  search.rs  settings.rs  signature.rs  source_control.rs  split.rs  ssh.rs  state.rs  status.rs  svg.rs  tab.rs  terminal.rs  theme.rs  (+2 more)
crates/directory/: Cargo.toml
crates/directory/src/: lib.rs
crates/meta/: Cargo.toml  build.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
extra/tools/make/: Cargo.toml
floem-editor/: Cargo.toml  README.md
floem-editor-core/: Cargo.toml
floem-editor-core/src/: chars.rs  cursor.rs  editor.rs  indent.rs  lib.rs  register.rs  selection.rs  soft_tab.rs  util.rs
floem-editor-core/src/buffer/: mod.rs  rope_text.rs
floem-editor/examples/: editor.rs
floem-editor/src/: actions.rs  color.rs  command.rs  editor.rs  gutter.rs  id.rs  layout.rs  lib.rs  listener.rs  movement.rs  text.rs  view.rs  visual_line.rs
floem-editor/src/keypress/: key.rs  mod.rs  press.rs
lapce-app/: Cargo.toml
lapce-app/benches/: visual_line.rs
lapce-app/src/: about.rs  alert.rs  app.rs  code_action.rs  code_lens.rs  command.rs  completion.rs  config.rs  db.rs  debug.rs  doc.rs  doc2.rs  editor.rs  editor2.rs  editor_tab.rs  editorconfig.rs  find.rs  focus_text.rs  global_search.rs  history.rs  hover.rs  id.rs  inline_completion.rs  keymap.rs  keypress.rs  lib.rs  listener.rs  logging.rs  lsp.rs  main_split.rs  markdown.rs  palette.rs  plugin.rs  proxy.rs  rename.rs  settings.rs  snippet.rs  source_control.rs  status.rs  tab_headers.rs  (+10 more)
lapce-app/src/app/: grammars.rs  logging.rs
lapce-app/src/config/: color.rs  color_theme.rs  core.rs  editor.rs  icon.rs  icon_theme.rs  remote.rs  svg.rs  terminal.rs  ui.rs  watcher.rs
lapce-app/src/doc/: phantom_text.rs  readonly.rs
lapce-app/src/editor/: diff.rs  gutter.rs  location.rs  movement.rs  readonly.rs  view.rs  view_data.rs  visual_line.rs
lapce-app/src/file_explorer/: data.rs  mod.rs  node.rs  view.rs
lapce-app/src/floem_editor/: color.rs  editor.rs  layout.rs  mod.rs  reimpl.rs  text.rs  view.rs
lapce-app/src/keypress/: condition.rs  key.rs  keymap.rs  loader.rs  press.rs  virtual_key.rs
lapce-app/src/palette/: item.rs  kind.rs
lapce-app/src/panel/: call_hierarchy_view.rs  data.rs  debug_view.rs  document_symbol.rs  global_search_view.rs  implementation_view.rs  kind.rs  mod.rs  plugin_view.rs  position.rs  problem_view.rs  references_view.rs  source_control_view.rs  style.rs  terminal_view.rs  view.rs
lapce-app/src/proxy/: custom.rs  gh.rs  remote.rs  ssh.rs  ts.rs  wsl.rs
lapce-app/src/terminal/: data.rs  event.rs  mod.rs  panel.rs  raw.rs  tab.rs  view.rs
lapce-app/src/workspace/: custom.rs  ssh.rs  ts.rs  wsl.rs
lapce-core/: Cargo.toml  build.rs
lapce-core/queries/astro/: highlights.scm  injections.scm
lapce-core/queries/bash/: highlights.scm  indents.scm  injections.scm  textobjects.scm
lapce-core/queries/c/: highlights.scm
lapce-core/queries/clojure/: highlights.scm  injections.scm
lapce-core/queries/cmake/: highlights.scm  indents.scm  injections.scm  textobjects.scm
lapce-core/queries/comment/: highlights.scm
lapce-core/queries/cpp/: highlights.scm
lapce-core/src/: app.rs  buffer.rs  char_buffer.rs  command.rs  config.rs  container.rs  cursor.rs  db.rs  directory.rs  editor.rs  encoding.rs  explorer.rs  indent.rs  keymap.rs  language.rs  lens.rs  lib.rs  menu.rs  meta.rs  mode.rs  movement.rs  paragraph.rs  picker.rs  register.rs  rope_text_pos.rs  selection.rs  soft_tab.rs  style.rs  svg.rs  syntax.rs  terminal.rs  util.rs  word.rs  workspace.rs
lapce-core/src/word/: test.rs
lapce-data/: Cargo.toml
lapce-data/src/: about.rs  alert.rs  atomic_soft_tabs.rs  buffer.rs  code_action.rs  collections.rs  command.rs  completion.rs  config.rs  container.rs  data.rs  db.rs  debug.rs  document.rs  dropdown.rs  editor.rs  explorer.rs  find.rs  history.rs  hover.rs  images.rs  keypress.rs  language.rs  lib.rs  list.rs  lsp.rs  lsp_stdio.rs  menu.rs  movement.rs  palette.rs  panel.rs  picker.rs  plugin.rs  problem.rs  proxy.rs  rename.rs  rich_text.rs  scroll.rs  search.rs  selection_range.rs  (+11 more)
lapce-proxy/: Cargo.toml
lapce-proxy/src/: buffer.rs  cli.rs  directory.rs  dispatch.rs  lib.rs  lsp.rs  net.rs  plugin.rs  terminal.rs  vcs.rs  watcher.rs
lapce-rpc/: Cargo.toml
lapce-rpc/src/: buffer.rs  canon_path.rs  core.rs  counter.rs  dap.rs  dap_types.rs  file.rs  file_line.rs  language_id.rs  lib.rs  lsp.rs  parse.rs  plugin.rs  proxy.rs  source_control.rs  stdio.rs  style.rs  terminal.rs  url.rs
lapce-ui/: Cargo.toml  build.rs
lapce-ui/src/: CmdLineArgs.rs  about.rs  activity.rs  alert.rs  app.rs  button.rs  cmd_line_args  cmd_line_args.rs  code_action.rs  command.rs  completion.rs  data.rs  debug.rs  diff.rs  dropdown.rs  editor.rs  explorer.rs  find.rs  hover.rs  ime.rs  key_del.rs  keymap.rs  keypress.rs  lib.rs  list.rs  logging.rs  lsp.rs  lsp_stdio.rs  menu.rs  message.rs  outline.rs  palette.rs  panel.rs  picker.rs  plugin.rs  problem.rs  proxy.rs  scroll.rs  search.rs  settings.rs  (+12 more)
lsp/: Cargo.toml  general.go  jsonrpc.go  lsp.go  lsp_test.go  manifest.toml  plugin.go
lsp/src/: buffer.rs  dispatch.rs  lib.rs  lsp.rs  lsp_client.rs  lsp_plugin.rs  plugin.rs
proxy/: Cargo.toml
proxy/src/: buffer.rs  core_proxy.rs  dispatch.rs  lib.rs  lsp.rs  plugin.rs  terminal.rs
ui/: Cargo.toml
ui/src/: flex.rs  handler.rs  lib.rs  widget.rs
(+836 files in other folders)
