[package]
name = "lapce-core"
version = "0.0.1"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
hashbrown = "0.11.2"
sled = "0.34.7"
base64 = "0.13.0"
alacritty_terminal = "0.15.0"
config = "0.11"
indexmap = "1.7.0"
directories = "4.0.1"
tinyfiledialogs = "3.8.3"
itertools = "0.10.1"
unicode-width = "0.1.8"
unicode-segmentation = "1.7.1"
im = { version = "15.0.0", features = ["serde"] }
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.4"
regex = "1.4.2"
usvg = "0.14.0"
jsonrpc-lite = "0.5.0"
bit-vec = "0.5.0"
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
include_dir = "0.6.0"
tree-sitter = "=0.19.2"
tree-sitter-rust = "0.19.0"
tree-sitter-highlight = "0.19.2"
anyhow = "1.0.32"
strum = "0.19"
strum_macros = "0.19"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
xi-core-lib = "0.3.0"
xi-rope = { git = "https://github.com/lapce/xi-editor", features = ["serde"] }
xi-unicode = "0.3.0"
xi-rpc = "0.3.0"
xi-trace = "0.2.0"
fzyr = "0.1.2"
fuzzy-matcher = "0.3.7"
uuid = { version = "0.7.4", features = ["v4"] }
lsp-types = { version = "0.89.2", features = ["proposed"] }
druid = { git = "https://github.com/lapce/druid", features = ["svg", "im"] }
# druid = { path = "../../druid/druid", features = ["svg", "im"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
lapce-proxy = { path = "../proxy" }

[build-dependencies]
cc = "*"
