[package]
name = "floem-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
lapce-core.workspace = true
lapce-rpc.workspace = true
lapce-xi-rope.workspace = true
smallvec.workspace = true
strum.workspace = true
strum_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# TODO: inherit this from workspace?
floem = { git = "https://github.com/lapce/floem", rev = "6ae536237716d606e5546edb9f72867f2bc23946" }
# TODO: once https://github.com/rust-lang/rust/issues/65991 is stabilized we don't need this
downcast-rs = "1.2.0"

[[example]]
name = "editor"
path = "examples/editor.rs"
