[package]
name         = "lapce-core"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow       = { workspace = true }
include_dir  = { workspace = true }
itertools    = { workspace = true }
once_cell    = { workspace = true }
remain       = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
regex        = { workspace = true }

directory         = { workspace = true }
lsp-types         = { workspace = true }
meta              = { workspace = true }
lapce-xi-rope     = { workspace = true }
lapce-rpc         = { workspace = true }
floem-editor-core = { workspace = true }
tracing           = { workspace = true }

ahash       = { version = "0.8.11" }
arc-swap    = { version = "1.6.0" }
hashbrown   = { version = "0.14.5", features = ["raw"] }
libloading  = { version = "0.8.1" }
slotmap     = { version = "1.0" }
tree-sitter = { version = "0.22.6" }

[features]
default      = []
portable     = []
distribution = []

[build-dependencies]
anyhow = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.build-dependencies]
git2   = { workspace = true }
