[package]
name         = "lapce-core"
license      = { workspace = true }
version      = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
directories  = { workspace = true }
itertools    = { workspace = true }
once_cell    = { workspace = true }
strum        = { workspace = true }
strum_macros = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
include_dir  = { workspace = true }
regex        = { workspace = true }

lsp-types         = { workspace = true }
lapce-xi-rope     = { workspace = true }
lapce-rpc         = { workspace = true }
floem-editor-core = { workspace = true }

libloading  = "0.8.1"
slotmap     = "1.0"
arc-swap    = "1.6.0"
tree-sitter = "0.22.6"
ahash       = "0.8.11"
remain      = "0.2"
hashbrown   = { version = "0.14.5", features = ["raw"] }


[features]
default      = []
portable     = []
distribution = []

[build-dependencies]
anyhow = { workspace = true }

[target.'cfg(not(target_os = "linux"))'.build-dependencies]
git2   = { workspace = true }
