[package]
name = "lapce-data"
version = "0.2.5"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"

[dependencies]
sha2 = "0.10.6"
interprocess = "1.1.1"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
tar = "0.4.38"
flate2 = "1.0.24"
fs_extra = "1.2.0"
chrono = "0.4.19"
log = "0.4.14"
rayon = "1.5.1"
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
hashbrown = "0.11.2"
sled = "0.34.7"
base64 = "0.13.0"
alacritty_terminal = "0.17.0"
once_cell = "1.15"
config = { version = "0.13.2", default-features = false, features = ["toml"] }
include_dir = "0.6.0"
indexmap = "1.7.0"
itertools = "0.10.1"
im = { version = "15.0.0", features = ["serde"] }
crossbeam-channel = "0.5.0"
regex = "1.5.6"
parking_lot = { version = "0.11.0", features = ["deadlock_detection"] }
thiserror = "1.0"
anyhow = "1.0.32"
strum = "0.24.0"
strum_macros = "0.24"
serde = "1.0"
serde_json = "1.0"
notify = { version = "5.0.0-pre.13", features = ["serde"] }
lapce-xi-rope = { version = "0.3.1", features = ["serde"] }
fuzzy-matcher = "0.3.7"
uuid = { version = "0.8.2", features = ["v4"] }
lsp-types = { version = "0.93", features = ["proposed"] }
druid = { git = "https://github.com/lapce/druid", branch = "shell_opengl", features = [ "svg", "im", "serde", ] }
# druid = { path = "../../druid/druid", features = ["svg", "im" , "serde"] }
toml_edit = { version = "0.14.4", features = ["easy"] }
structdesc = { git = "https://github.com/lapce/structdesc" }
#structdesc = { path = "../../structdesc" }
lapce-core = { path = "../lapce-core" }
lapce-rpc = { path = "../lapce-rpc" }
lapce-proxy = { path = "../lapce-proxy" }
bytemuck = "1.8.0"
# For parsing markdown data, such as in hovers
pulldown-cmark = "0.9.1"
smallvec = "1.10.0"

[target.'cfg(target_os="macos")'.dependencies]
dmg = "0.1.1"

[features]
updater = []
portable = []
