[package]
name = "lapce-data"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
flate2.workspace = true
hashbrown.workspace = true
im.workspace = true
include_dir.workspace = true
indexmap.workspace = true
interprocess.workspace = true
itertools.workspace = true
log.workspace = true
notify.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
strum.workspace = true
strum_macros.workspace = true
tar.workspace = true
thiserror.workspace = true
toml_edit.workspace = true

lsp-types.workspace = true

lapce-xi-rope.workspace = true

lapce-core.workspace = true
lapce-rpc.workspace = true
lapce-proxy.workspace = true

druid.workspace = true

sha2 = "0.10.6"
fs_extra = "1.2.0"
sled = "0.34.7"
config = { version = "0.13.2", default-features = false, features = ["toml"] }
fuzzy-matcher = "0.3.7"
uuid = { version = "1.2.2", features = ["v4"] }
structdesc = { git = "https://github.com/lapce/structdesc" }
bytemuck = "1.8.0"
# For parsing markdown data, such as in hovers
pulldown-cmark = "0.9.1"
url = "2.3.1"

[target.'cfg(target_os="macos")'.dependencies]
dmg = "0.1.1"

[target.'cfg(target_os="windows")'.dependencies]
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[features]
updater = []
portable = []
